style: Reduce font size of match percentage to prevent overlap

--- a/static/css/compare.css
+++ b/static/css/compare.css
@@ -207,7 +207,7 @@
 .match-percentage {
     position: relative;
     z-index: 1;
-    font-size: 3rem;
+    font-size: 2.2rem;
     font-weight: 700;
     color: var(--text-color);
 }
